--- a/src/Components/css/postList.css
+++ b/src/Components/css/postList.css
@@ -1,17 +1,17 @@
 .postslist{
     display: flex;
     flex-direction: column;
-}
-
-.postslist {
-    width: 70%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
+    align-items: center;
 }
 
 .post {
+    margin: 2rem;
     margin-top: 1.3rem ;
-    width: 80%;
-    height: 40%;
-    border: solid 1px #fff;
-    box-shadow: aliceblue;
+    width: 70vh;
+    height: 20vh;
+    border: solid 2px #282c34;
+    box-shadow: rgb(17, 33, 48) 4px 0 12px 2px;
+    padding: 1rem;
 }
