--- a/src/Components/css/contentSection.css
+++ b/src/Components/css/contentSection.css
@@ -1,6 +1,8 @@
 .content {
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  margin-top: 2rem;
+  transition: all 0.3s;
 }
