--- a/src/Components/css/header.css
+++ b/src/Components/css/header.css
@@ -4,13 +4,25 @@ header {
   align-items: center;
   background-color: #121416;
   color: aliceblue;
+  position: fixed;
+  width: 100%;
+  height: 4rem;
+  z-index: 999;
 }
 header input {
-  height: 1.5rem;
+  height: 2rem;
   width: 19rem;
   margin-right: 1rem;
+  border-radius: 0.4rem;
 }
 header h1 {
   height: 1.5rem;
   margin-left: 1rem;
+  transition: all 0.3s;
+}
+header h1:hover {
+  height: 1.5rem;
+  margin-left: 1rem;
+  font-size: 2.1rem;
+  cursor: pointer;
 }
