--- a/src/Components/css/postList.css
+++ b/src/Components/css/postList.css
@@ -1,17 +1,28 @@
-.postslist{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    align-items: center;
+.postslist {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  margin-top: 2rem;
 }
 
 .post {
-    margin: 2rem;
-    margin-top: 1.3rem ;
-    width: 70vh;
-    height: 20vh;
-    border: solid 2px #282c34;
-    box-shadow: rgb(17, 33, 48) 4px 0 12px 2px;
-    padding: 1rem;
+  margin: 2rem;
+  margin-top: 1.3rem;
+  width: 70vh;
+  height: 20vh;
+  /* border: solid 0.1rem #282c34; */
+  box-shadow: rgb(17, 33, 48) 0.2rem 0 1rem 0.2rem;
+  padding: 1rem;
+  transition: all 0.3s;
+}
+.post:hover {
+  box-shadow: rgb(17, 33, 48) 0.1rem 0 0.5rem 0.1rem;
+  /* border: solid 0.05rem #282c34; */
+  width: 67vh;
+  height: 18.5vh;
+}
+.post h2:hover {
+  cursor: pointer;
 }
